<resources>
    <string name="app_name">VendasNow Pro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="MerchantId">52b1e339-f735-4db9-9909-2408f4a23382</string>
    <string name="MerchantKey">QTXQVXZMTHNJMVNFBCKRXZSGWAYMQQNFKPJPPSMI</string>

    <string name="menu_home">Home</string>
    <string name="menu_client">Clientes</string>
    <string name="menu_product">Produtos</string>
    <string name="menu_service">Serviços</string>
    <string name="menu_sale">Vendas</string>
    <string name="menu_new_sale">Nova venda</string>
    <string name="menu_graphics">Gráficos</string>
    <string name="menu_about">Sobre</string>
    <string name="menu_subscription">Seja Pro!</string>
    <string name="menu_accounts_receivable">Contas a receber/recebidas</string>
    <string name="menu_my_account">Minha conta</string>


<!--        <string name="default_web_client_id" translatable="false">918458643178-qes184gml7730okop4roqdjcos9oo3j6.apps.googleusercontent.com</string>-->
    <string name="sair_do_app">Sair do app</string>
    <string name="logout">Desconectar do app</string>
    <string name="login_google">Login com Google</string>
    <string name="login_email">Login com e-mail</string>
    <string name="signup">Não tem uma conta?</string>
    <string name="signupregister">Registre-se</string>
    <string name="forgotpassword">Esqueci a senha</string>
    <string name="recoverforgotpassword">Recuperar a senha</string>
    <string name="login_facebook">Login com Facebook</string>
    <string name="msg_error_authentication_failure">Autenticação falhou!</string>
    <string name="msg_error_session_expired">Sessão expirada!</string>
    <string name="msg_error_email_exist_google">Esse endereço de email já foi utilizado para se conectar no app com o Google</string>

    <string name="hint_email">Informe o email</string>
    <string name="hint_secret">Informe a senha</string>
    <string name="hint_new_secret">Informe a nova senha</string>
    <string name="hint_new_client">Informe o nome do Cliente</string>
    <string name="hint_new_telephone">Informe o Telefone</string>
    <string name="hint_quantity">Informe a quantidade</string>

    <string name="hint_new_description">Informe a descrição</string>
    <string name="hint_new_value">Informe o valor de venda</string>
    <string name="hint_new_value_cost">Informe o valor de custo</string>

    <string name="hint_search_view">Busque pelo nome</string>
    <string name="hint_search_view_sale">Busque pelo nome do cliente</string>

    <string name="action_confirmar">Confirmar</string>
    <string name="action_cancelar">Cancelar</string>
    <string name="action_delete">Excluir</string>
    <string name="action_edit">Alterar</string>
    <string name="action_help">Ajuda</string>
    <string name="action_new">Novo</string>
    <string name="action_add_product">Adicionar Produto</string>
    <string name="action_go_back">Voltar</string>

    <string name="label_client_name">Nome do Cliente</string>
    <string name="label_new_client">Cadastro de Cliente</string>
    <string name="label_new_product">Cadastro de Produto</string>
    <string name="label_new_service">Cadastro de Serviço</string>
    <string name="label_payment_form">Forma de pagamento</string>
    <string name="label_telephone_name">Telefone</string>
    <string name="label_value">Valor</string>
    <string name="label_unit_value">Valor unitário:</string>
    <string name="label_unit_value_service">Valor do serviço:</string>
    <string name="label_quantity">Quantidade:</string>
    <string name="label_subtotal">Subtotal:</string>
    <string name="label_total_products">Total em produtos: </string>
    <string name="label_total_products_profit">Lucro sobre os produtos: </string>
    <string name="label_add_products">Adicione os produtos</string>
    <string name="label_total_services">Total em serviços: </string>
    <string name="label_add_services">Informe o serviço</string>
    <string name="label_total_sale">Total da venda: </string>
    <string name="label_total_account_receivable">Total a receber da venda: </string>
    <string name="label_sale_date">Data da Venda: </string>
    <string name="label_select_sale_date">Selecione a data de venda</string>
    <string name="label_select_client">Selecione o cliente</string>
    <string name="label_select_payment">Selecione a forma de pagamento</string>
    <string name="label_detail_sale">Detalhes da venda</string>
    <string name="label_field_required">Campos obrigatórios</string>
    <string name="label_cost_value">(Custo)</string>
    <string name="label_sale_value">(Venda)</string>
    <string name="label_due_date">Data de vencimento: </string>
    <string name="label_situation">Situação: </string>
    <string name="label_sale_date_register">Venda registrada em:</string>
    <string name="label_graphics_top_products">Top 5 produtos + vendidos</string>
    <string name="label_graphics_top_services">Serviços por mês e ano</string>
    <string name="label_graphics_invoices_year">Faturamento por mês e ano</string>
    <string name="label_graphics_profit_year">Lucros por mês e ano</string>
    <string name="label_graphics_products_profitable">Top 5 produtos lucrativos</string>
    <string name="label_graphics_invoices_year_total">Total do faturamento no ano</string>
    <string name="label_graphics_profit_year_total">Total do lucro no ano</string>
    <string name="label_account_to_receive">A receber</string>
    <string name="label_account_receive">Recebida</string>
    <string name="label_app_bar_account_receive">Contas a receber geradas pela venda</string>
    <string name="label_panel_account_receive">Total geral de contas a receber no mês</string>
    <string name="label_panel_account_to_receive">Total geral de contas recebidas no mês</string>
    <string name="label_panel_sales">Total geral de vendas no mês</string>
    <string name="msg_delete_item">Deseja excluir o item?</string>
    <string name="label_plan_selected">Plano selecionado</string>
    <string name="label_plan_current">Plano atual:</string>
    <string name="label_plan_subscription_date">Assinado em:</string>
    <string name="label_plan_value">Valor pago:</string>
    <string name="label_plan_expiration">Expira em:</string>
    <string name="label_credit_card">Cartão de crédito</string>
    <string name="label_debit_card">Cartão de débito</string>
    <string name="label_number_card">Número do Cartão</string>
    <string name="label_holder_name">Nome do titular do Cartão</string>
    <string name="label_expiration_date">Data de expiração</string>
    <string name="label_security_code">Código de segurança</string>
    <string name="label_select_brand">Selecione a bandeira do seu cartão</string>

    <string name="validation_quantity">Informe a quantidade</string>
    <string name="validation_quantity_and_value">Informe o valor</string>
    <string name="validation_sale_date">Informe a data da venda</string>
    <string name="validation_sale_client">Selecione o cliente para a venda</string>
    <string name="validation_sale_payment">Selecione a forma de pagamento para a venda</string>
    <string name="validation_no_requestCode">Conta a receber não encontrada!</string>
    <string name="validation_sale_products_services">Adicione ao menos um produto ou um serviço para a venda</string>
    <string name="validation_connection">Dispositivo sem internet.</string>
    <string name="validation_subscription">Sua assinatura expirou. Faça uma nova assinatura e continue sendo Pro!</string>
    <string name="validation_new_sale_product">É necessário cadastrar os produtos antes de registrar uma venda</string>
    <string name="validation_email">Informe o e-mail!</string>
    <string name="validation_secret">Informe a senha!</string>
    <string name="validation_number_card">Informe o número do cartão</string>
    <string name="validation_holder_name">Informe o nome do titular do cartão</string>
    <string name="validation_expiration_date">Informe a data de expiração do cartão</string>
    <string name="validation_security_code">Informe o código de segurança do cartão</string>
    <string name="validation_number_card_mod10">Número de Cartão inválido</string>

    <string name="error_400">Falha na tentativa!</string>
    <string name="error_503">Aplicativo fora do ar. Aguarde o retorno!</string>
    <string name="movie_client">bROElv6NCGM</string>
    <string name="movie_product">N11KBDlBIfs</string>
    <string name="movie_sale">cCkYnxzR7WU</string>
    <string name="movie_account">GWEVYgSnfuU</string>


    <string-array name="ArrayPayment">
        <item>1,Dinheiro</item>
        <item>2,Cartão de Crédito</item>
        <item>3,Cartão de Débito</item>
        <item>4,Boleto bancário</item>
        <item>5,Cheque</item>
        <item>6,Pix</item>
        <item>7,30 dias</item>
        <item>8,30/60 dias</item>
        <item>9,30/60/90 dias</item>
        <item>10,30/60/90/120 dias</item>
        <item>11,Transferência bancária</item>
    </string-array>

    <string-array name="ArrayStatus">
        <item>1,A receber</item>
        <item>2,Recebida</item>
    </string-array>

    <string-array name="Graphics">
        <item>Top 5 produtos + vendidos</item>
        <item>Serviços por mês e ano</item>
        <item>Faturamento por mês e ano</item>
        <item>Lucros por mês e ano</item>
    </string-array>

    <string-array name="Menu_Main">
        <item>Clientes</item>
        <item>Produtos</item>
        <item>Vendas</item>
        <item>Contas a receber/recebidas</item>
        <item>Gráficos</item>
    </string-array>

    <string-array name="ArrayBrands">
        <item>American Express</item>
        <item>Aura</item>
        <item>Diners Club</item>
        <item>Discover</item>
        <item>Elo</item>
        <item>Hipercard</item>
        <item>JCB</item>
        <item>MasterCard</item>
        <item>Visa</item>
    </string-array>


</resources>