<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.produze.sistemas.vendasnow.vendasnowpremium.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_client"
        android:name="com.produze.sistemas.vendasnow.vendasnowpremium.ui.client.FragmentClient"
        android:label="@string/menu_client"
        tools:layout="@layout/fragment_client" />

    <fragment
        android:id="@+id/nav_product"
        android:name="com.produze.sistemas.vendasnow.vendasnowpremium.ui.product.FragmentProduct"
        android:label="@string/menu_product"
        tools:layout="@layout/fragment_product" />

    <fragment
        android:id="@+id/nav_graphic"
        android:name="com.produze.sistemas.vendasnow.vendasnowpremium.ui.graphics.FragmentGraphic"
        android:label="@string/menu_graphics"
        tools:layout="@layout/fragment_graphics" />

    <fragment
        android:id="@+id/nav_my_account"
        android:name="com.produze.sistemas.vendasnow.vendasnowpremium.ui.myaccount.FragmentMyAccount"
        android:label="@string/menu_my_account"
        tools:layout="@layout/fragment_myaccount" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.produze.sistemas.vendasnow.vendasnowpremium.ui.about.FragmentAbout"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_sale"
        android:name="com.produze.sistemas.vendasnow.vendasnowpremium.ui.sale.FragmentSale"
        android:label="@string/menu_sale"
        tools:layout="@layout/fragment_sale" />

    <fragment
        android:id="@+id/nav_new_sale"
        android:name="com.produze.sistemas.vendasnow.vendasnowpremium.ui.sale.FragmentNewSale"
        android:label="@string/menu_new_sale"
        tools:layout="@layout/fragment_new_sale" />

    <fragment
        android:id="@+id/nav_detail_sale"
        android:name="com.produze.sistemas.vendasnow.vendasnowpremium.ui.sale.FragmentDetailSale"
        android:label="@string/label_detail_sale"
        tools:layout="@layout/fragment_detail_sale" />

    <fragment
        android:id="@+id/nav_graphic_top_five_products"
        android:name="com.produze.sistemas.vendasnow.vendasnowpremium.ui.graphics.FragmentGraphicTopFiveProducts"
        android:label="@string/label_graphics_top_products"
        tools:layout="@layout/fragment_graphics_top_five_products" />

    <fragment
        android:id="@+id/nav_graphic_top_five_services"
        android:name="com.produze.sistemas.vendasnow.vendasnowpremium.ui.graphics.FragmentGraphicTopFiveServices"
        android:label="@string/label_graphics_top_services"
        tools:layout="@layout/fragment_graphics_top_five_services" />

    <fragment
        android:id="@+id/nav_graphic_invoice_year"
        android:name="com.produze.sistemas.vendasnow.vendasnowpremium.ui.graphics.FragmentGraphicInvoiceYear"
        android:label="@string/label_graphics_invoices_year"
        tools:layout="@layout/fragment_graphics_invoice_year" />

    <fragment
        android:id="@+id/nav_graphic_profit_year"
        android:name="com.produze.sistemas.vendasnow.vendasnowpremium.ui.graphics.FragmentGraphicProfitYear"
        android:label="@string/label_graphics_profit_year"
        tools:layout="@layout/fragment_graphics_profit_year" />

    <fragment
        android:id="@+id/nav_account_receivable"
        android:name="com.produze.sistemas.vendasnow.vendasnowpremium.ui.account.FragmentAccountReceivable"
        android:label="@string/menu_accounts_receivable"
        tools:layout="@layout/fragment_accounts_receivable" />

    <fragment
        android:id="@+id/nav_detail_account_receivable"
        android:name="com.produze.sistemas.vendasnow.vendasnowpremium.ui.account.FragmentDetailAccountReceivable"
        android:label="@string/menu_accounts_receivable"
        tools:layout="@layout/fragment_detail_account_receivable" />

    <fragment
        android:id="@+id/nav_subscription"
        android:name="com.produze.sistemas.vendasnow.vendasnowpremium.ui.subscription.FragmentSubscription"
        android:label="@string/menu_new_sale"
        tools:layout="@layout/fragment_new_sale" />

</navigation>