<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextStyleTitleActivity"
            android:text="@string/label_new_service"
            android:layout_gravity="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColorHint="@color/black"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:counterEnabled="true"
            app:counterMaxLength="100">

            <EditText
                android:id="@+id/editTextDescription"
                android:hint="@string/hint_new_description"
                android:inputType="textPersonName"
                style="@style/SearchViewStyle"
                android:background="@drawable/custom_background_field_required"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="100"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColorHint="@color/black"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:counterEnabled="true"
            app:counterMaxLength="18">

            <EditText
                android:id="@+id/editTextValue"
                android:hint="@string/hint_new_value"
                android:inputType="number"
                android:maxLength="18"
                style="@style/SearchViewStyle"
                android:background="@drawable/custom_background_field_required"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"/>

            <android.widget.Button
                android:id="@+id/btnConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:background="@drawable/custom_button_purple"
                android:theme="@style/ButtonStyleDefault"
                android:text="@string/action_confirmar"/>
            <android.widget.Button
                android:id="@+id/btnCancel"
                android:text="@string/action_cancelar"
                android:background="@drawable/custom_button_purple"
                android:theme="@style/ButtonStyleDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

</layout>