<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextStyleTitleActivity"
            android:text="@string/label_new_client"
            android:layout_gravity="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColorHint="@color/black"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:counterEnabled="true"
            app:counterMaxLength="100">

        <EditText
            android:id="@+id/editTextNome"
            android:hint="@string/hint_new_client"
            android:inputType="textPersonName"
            style="@style/SearchViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_background_field_required"
            android:maxLength="100"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColorHint="@color/black"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:counterEnabled="true"
            app:counterMaxLength="14">

        <EditText
            android:id="@+id/editTextTelefone"
            android:hint="@string/hint_new_telephone"
            android:background="@drawable/custom_background_search_view"
            android:inputType="number"
            style="@style/SearchViewStyle"
            android:maxLength="14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/label_field_required"
                android:layout_margin="@dimen/margin_default"
                style="@style/StyleFieldRequired">

            </TextView>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/fab_margin"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                style="@style/ButtonBlue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <ImageView
                    android:id="@+id/imageViewLogin"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="start"
                    android:layout_marginStart="6dp"
                    android:src="@drawable/ic_baseline_save_24"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/textViewLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/action_confirmar"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="16dp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:indeterminateTint="@color/white"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</layout>