<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--            android:id="@+id/ConstraintLayoutSpinnerClient"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/ConstraintLayoutSaleDate"-->
<!--            android:layout_margin="5dp">-->

        <TextView
            android:id="@+id/textViewClient"
            style="@style/TextStyleTitleActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/label_add_services"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColorHint="@color/black"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:counterEnabled="true"
                app:counterMaxLength="100">

                <EditText
                    android:id="@+id/editTextDescription"
                    android:hint="@string/hint_new_description"
                    android:inputType="textPersonName"
                    style="@style/SearchViewStyle"
                    android:background="@drawable/custom_background_field_required"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="100"/>


            </com.google.android.material.textfield.TextInputLayout>

<!--            <RelativeLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="horizontal"-->
<!--                android:layout_marginTop="5dp"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/textViewClient">-->

<!--            <Spinner-->
<!--                android:id="@+id/spinnerService"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="50dp"-->
<!--                android:background="@drawable/custom_spinner_default"-->
<!--                android:spinnerMode="dropdown">-->

<!--            </Spinner>-->

<!--                <ImageView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_alignParentEnd="true"-->
<!--                    android:layout_centerVertical="true"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:layout_marginEnd="15dp"-->
<!--                    android:src="@drawable/ic_baseline_expand_more_24" />-->

<!--            </RelativeLayout>-->


<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColorHint="@color/black"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:counterEnabled="true"
            app:counterMaxLength="18">

            <EditText
                android:id="@+id/editTextValueSale"
                android:hint="@string/hint_new_value"
                android:inputType="number"
                android:maxLength="18"
                style="@style/SearchViewStyle"
                android:background="@drawable/custom_background_field_required"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <android.widget.Button
                android:id="@+id/btnConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/ButtonStyleDefault"
                android:background="@drawable/custom_button_green"
                android:layout_marginEnd="5dp"
                android:text="@string/action_confirmar" />
            <android.widget.Button
                android:id="@+id/btnCancel"
                android:text="@string/action_cancelar"
                android:theme="@style/ButtonStyleDefault"
                android:background="@drawable/custom_button_green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>


</layout>